; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_diracdsp.c_add_rect_clamped_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_diracdsp.c_add_rect_clamped_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i64*, i32, i32, i32)* @add_rect_clamped_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_rect_clamped_c(i32* %0, i32* %1, i32 %2, i64* %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i64* %3, i64** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  store i32 0, i32* %16, align 4
  br label %17

17:                                               ; preds = %84, %7
  %18 = load i32, i32* %16, align 4
  %19 = load i32, i32* %14, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %87

21:                                               ; preds = %17
  store i32 0, i32* %15, align 4
  br label %22

22:                                               ; preds = %68, %21
  %23 = load i32, i32* %15, align 4
  %24 = load i32, i32* %13, align 4
  %25 = icmp slt i32 %23, %24
  br i1 %25, label %26, label %71

26:                                               ; preds = %22
  %27 = load i32*, i32** %9, align 8
  %28 = load i32, i32* %15, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 32
  %33 = ashr i32 %32, 6
  %34 = sext i32 %33 to i64
  %35 = load i64*, i64** %11, align 8
  %36 = load i32, i32* %15, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i64, i64* %35, i64 %37
  %39 = load i64, i64* %38, align 8
  %40 = add nsw i64 %34, %39
  %41 = call i32 @av_clip_uint8(i64 %40)
  %42 = load i32*, i32** %8, align 8
  %43 = load i32, i32* %15, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  store i32 %41, i32* %45, align 4
  %46 = load i32*, i32** %9, align 8
  %47 = load i32, i32* %15, align 4
  %48 = add nsw i32 %47, 1
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %46, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = add nsw i32 %51, 32
  %53 = ashr i32 %52, 6
  %54 = sext i32 %53 to i64
  %55 = load i64*, i64** %11, align 8
  %56 = load i32, i32* %15, align 4
  %57 = add nsw i32 %56, 1
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i64, i64* %55, i64 %58
  %60 = load i64, i64* %59, align 8
  %61 = add nsw i64 %54, %60
  %62 = call i32 @av_clip_uint8(i64 %61)
  %63 = load i32*, i32** %8, align 8
  %64 = load i32, i32* %15, align 4
  %65 = add nsw i32 %64, 1
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds i32, i32* %63, i64 %66
  store i32 %62, i32* %67, align 4
  br label %68

68:                                               ; preds = %26
  %69 = load i32, i32* %15, align 4
  %70 = add nsw i32 %69, 2
  store i32 %70, i32* %15, align 4
  br label %22

71:                                               ; preds = %22
  %72 = load i32, i32* %10, align 4
  %73 = load i32*, i32** %8, align 8
  %74 = sext i32 %72 to i64
  %75 = getelementptr inbounds i32, i32* %73, i64 %74
  store i32* %75, i32** %8, align 8
  %76 = load i32, i32* %10, align 4
  %77 = load i32*, i32** %9, align 8
  %78 = sext i32 %76 to i64
  %79 = getelementptr inbounds i32, i32* %77, i64 %78
  store i32* %79, i32** %9, align 8
  %80 = load i32, i32* %12, align 4
  %81 = load i64*, i64** %11, align 8
  %82 = sext i32 %80 to i64
  %83 = getelementptr inbounds i64, i64* %81, i64 %82
  store i64* %83, i64** %11, align 8
  br label %84

84:                                               ; preds = %71
  %85 = load i32, i32* %16, align 4
  %86 = add nsw i32 %85, 1
  store i32 %86, i32* %16, align 4
  br label %17

87:                                               ; preds = %17
  ret void
}

declare dso_local i32 @av_clip_uint8(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
